# foundation

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE (1)  README.md  ROADMAP.md  SECURITY.md  cmd-ledger.patch  package-lock.json  package.json  rfc-0004-cmd-types.patch  shell-backend.patch  tsconfig.json
.github/workflows/: ci.yml
agent/alios/: Cargo.toml
agent/alios/src/: claude_planner.rs  lib.rs  routed_transport.rs
apps/desktop/: anthropic-planner.cjs  index.html  key-store.cjs  main.cjs  preload.cjs  receipt-store.cjs  renderer.js
capabilities/: filesystem.demo.ts  filesystem.ts
capabilities/browser/: Cargo.toml
capabilities/browser/src/: lib.rs
capabilities/calendar/: Cargo.toml
capabilities/calendar/src/: lib.rs
capabilities/files/: Cargo.toml
capabilities/files/src/: lib.rs
capabilities/mail/: Cargo.toml
capabilities/terminal/: Cargo.toml
capabilities/terminal/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/00-governance/: 00.01-documentation-reconciliation.md  00.02-open-core-governance.md
docs/01-vision/: 01.00-overview.md  01.01-why-cmdos-exists.md  01.02-mission.md  01.02-positioning.md  01.03-vision.md  01.04-future-of-computing.md  01.05-future-of-ai.md  01.06-human-ai-collaboration.md  01.07-execution-over-conversation.md  01.08-design-objectives.md  01.09-non-goals.md  01.10-vision-summary.md  strategy-v2.md
docs/02-philosophy/: 02.00-overview.md  02.01-intent-first.md  02.02-execution-before-interface.md  02.03-trust-before-intelligence.md  02.04-humans-govern-ai-executes.md  02.05-everything-is-an-executable-capability.md  02.06-execution-requires-context.md  02.07-systems-should-explain-themselves.md  02.08-recovery-is-part-of-execution.md  02.09-open-intelligence.md  02.10-philosophy-summary.md
docs/03-design-principles/: 03.00-overview.md  03.01-determinism-first.md  03.02-composition-over-complexity.md  03.03-explicit-over-implicit.md  03.04-stateless-by-default.md  03.05-immutable-by-design.md  03.06-security-by-default.md  03.07-observability-everywhere.md  03.08-failure-is-a-first-class-citizen.md  03.09-interfaces-are-replaceable.md  03.10-evolution-without-disruption.md  03.11-performance-through-simplicity.md  03.12-summary.md
docs/04-terminology/: 02-intent-model.md  04.00-canonical-glossary.md  04.00-overview.md  04.01-core-concepts.md  04.01-intent.md  04.02-context.md  04.03-capability.md  04.03-goal-model.md  04.04-planning-model.md  04.04-workflow.md  04.05-decision-model.md  04.05-execution.md  04.06-action-model.md  04.06-agent.md  04.07-execution-model.md  04.07-object.md  04.08-agent-model.md  04.08-state.md  04.09-event.md  04.09-system-model.md  04.10-security-model.md  04.10-session.md  04.100-execution.md  04.101-result.md  04.102-artifact.md  04.103-resource.md  04.104-identity.md  04.105-permission.md  04.106-trust.md  04.107-verification.md  04.108-audit.md  04.109-governance.md  04.11-resource.md  04.11-terminology-summary.md  04.110-policy.md  04.111-rule.md  04.112-condition.md  04.113-decision.md  04.114-planning.md  04.115-goal.md  (+90 more)
docs/05-architecture/: 05.06-communication-security.md
docs/06-development/: 06.01-development-principles.md  06.02-coding-standards.md  06.03-repository-structure.md  06.04 SDK Development  06.05 Testing Framework  06.06 CI-CD-Pipeline  06.07 Release Process  06.08 Developer Workflow  06.09 Development Architecture Summary  README.md
docs/07-product/: 07.00-product-direction.md  07.01 Product Overview  07.02 User Problems  07.03 User Journey  07.04 Use Cases  07.05 cmdOS Desktop Agent  07.06 cmdOS Mobile Agent  07.07 Enterprise Product  07.08 Product Summary  07.10-uiux-and-tech.md  README.md  cmdos-key-server-spec.md
docs/08-business/: 08.01-business-model.md  08.02 Market Analysis  08.03 Revenue Model  08.04 Plugin Economy  08.05 Enterprise Model  08.06 Token Economy  08.07 Business Summary  README.md
docs/09-roadmap/: 09.01 Roadmap Overview  09.02 Stage 0 - Foundation  09.03 Stage 1 - MVP  09.03.1-stage-1-build-plan.md  09.04 Stage 2 - Agent Platform  09.06 Stage 4 - AI Native OS  09.07 Roadmap Summary  README.md
docs/10-appendix/: 10.01-glossary.md  10.02 Core Concepts  10.03 Architecture Reference  10.04-security-reference.md  10.05-ai-model-reference.md  10.06-future-research.md  10.07-documentation-summary.md  README.md
docs/architecture/: overview.md
docs/archive/: 06.03-repository-structure.md
docs/kernel/: README.md
docs/rfcs/: 0000-rfc-process.md  0004-cmdkernel-object-model.md  0005-shadow-world-engine.md  0006-cmdos-machine-and-supervision.md  0007-cmd-ledger.md  0008-cmd-transaction.md  0009-cap-files.md  0010-cmd-policy.md  0011-cmd-kernel.md  0012-aipc.md  0013-alios-planner.md  0014-claude-planner.md  0015-cmd-cli.md  0016-claude-http.md  0017-cmd-auth.md  0018-cmd-router.md  0019-routed-transport.md  0020-cap-browser.md  0021-shell-core.md  0022-cap-terminal.md
kernel/: dryrun.demo.ts  event-log.demo.ts  event-log.ts  executor.demo.ts  executor.ts  full-loop.demo.ts  inspect.demo.ts  mock-planner.ts  permission-gate.ts  pipeline.demo.ts  rollback.demo.ts  verify-loop.demo.ts
kernel/cmd-kernel/: Cargo.toml
kernel/cmd-kernel/src/: lib.rs
kernel/cmd-ledger/: Cargo.toml
kernel/cmd-ledger/src/: lib.rs
kernel/cmd-policy/: Cargo.toml
kernel/cmd-policy/src/: lib.rs
kernel/cmd-shadow/: Cargo.toml
kernel/cmd-shadow/src/: lib.rs
kernel/cmd-transaction/: Cargo.toml
kernel/cmd-transaction/src/: engine.rs  lib.rs  resource.rs
kernel/cmd-types/: Cargo.toml
prototype/capabilities/: filesystem.demo.ts  filesystem.ts
schemas/: capability.ts  event.ts  execution-plan.ts  index.ts  intent.ts  permission-request.ts  planner.ts
services/aipc/: Cargo.toml
services/aipc/src/: lib.rs
services/claude-http/: Cargo.toml
services/claude-http/src/: lib.rs
services/nis/: Cargo.toml
services/nis/src/: lib.rs
services/semfs/: Cargo.toml
services/semfs/src/: lib.rs
services/shell-core/: Cargo.toml
services/shell-core/src/: lib.rs
shell/: package.json
(+148 files in other folders)
