[package]
name = "cap-browser"
description = "First-party browser capability: navigate, read, fill, submit — with R0-R3 risk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmd-types = { path = "../../kernel/cmd-types" }
cmd-transaction = { path = "../../kernel/cmd-transaction" }
serde_json.workspace = true

[dev-dependencies]
cmd-ledger = { path = "../../kernel/cmd-ledger" }
