[package]
name = "cap-files"
description = "First-party files capability: a reversible filesystem Resource"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmd-types = { path = "../../kernel/cmd-types" }
cmd-transaction = { path = "../../kernel/cmd-transaction" }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
cmd-ledger = { path = "../../kernel/cmd-ledger" }
