[package]
name = "cap-terminal"
description = "Shell capability: run commands, with risk decided by what the command can do"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmd-types = { path = "../../kernel/cmd-types" }
cmd-transaction = { path = "../../kernel/cmd-transaction" }
serde_json.workspace = true

[dev-dependencies]
cmd-ledger = { path = "../../kernel/cmd-ledger" }
tempfile = "3"
