[package]
name = "cmd-transaction"
description = "Reversible execution engine: simulate / snapshot / execute / verify / commit / rollback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmd-types = { path = "../cmd-types" }
cmd-ledger = { path = "../cmd-ledger" }
serde_json.workspace = true
