[package]
name = "aipc"
description = "Agent IPC: MCP-style capability registry and permission-gated tool router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmd-types = { path = "../../kernel/cmd-types" }
cmd-policy = { path = "../../kernel/cmd-policy" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
